--- a/GOLOOK/css/company.css
+++ b/GOLOOK/css/company.css
@@ -14,6 +14,7 @@ h3{
 	background-size:cover;
 	margin-top:50px;
 	padding-top:50px;
+	background-position: center center;
 	}
 
 @media (max-width: 768px) {
