--- a/JH/css/style.css
+++ b/JH/css/style.css
@@ -125,7 +125,19 @@ a.more{ width: 76px; height: 76px; cursor: pointer; display: inline-block; backg
 
 
 /*inside contents*/
+.s_sideMenu{ width: 158px; position: fixed; left: 12%; bottom: 150px; z-index: 100; }
+.s_sideMenu h3.title{ font-size: 24px; line-height: 32px; padding: 15px 0; border-bottom: 1px solid #707070; margin-bottom: 25px; }
+.s_sideMenu h3.title span{ font-size: 20px; }
+.s_sideMenu ul.golink_list{border:1px solid #333; }
+.s_sideMenu ul.golink_list li{ border-bottom: 1px solid #333 ;}
+.s_sideMenu ul.golink_list li:last-child{ border: none; }
+.s_sideMenu ul.golink_list li p{ text-align: center; }
+.s_sideMenu ul.golink_list li p a{ display: block; line-height: 44px; cursor: pointer; background-color: #fff;}
+.s_sideMenu ul.golink_list li p a:hover{ background-color: #f5f5f5;}
+
+
 /*aboutus*/
+.inside_contents{ position: relative; }
 .inside_contents .bannerBox{ height: 600px; background-repeat: no-repeat; background-size: cover; background-position: center center; }
 .inside_contents .banner_01{ background-image: url(../images/banner/inside_01.png); }
 .inside_contents .banner_02{ background-image: url(../images/banner/inside_02.png); }
@@ -362,6 +374,7 @@ a.more{ width: 76px; height: 76px; cursor: pointer; display: inline-block; backg
 }
 @media (max-width:1650px){
 	.produc_box .ContentsBox{ width:calc(100% - 40px);}
+	.s_sideMenu{ left: 3%; }
 }
 @media (max-width:1410px){
 	.ContentsBox{ width:calc(100% - 40px); margin: 0 auto;}
@@ -374,6 +387,12 @@ a.more{ width: 76px; height: 76px; cursor: pointer; display: inline-block; backg
 	.doorPanel_notice ul li .top_icon{ width: 16vw; height: 16vw; }
 	.doorPanel_notice ul li .top_icon::after{ height: 10vw; }
 }
+@media (max-width:1280px){
+	.s_sideMenu{ left: 20px; width: 125px; }
+	.s_sideMenu h3.title{ font-size: 20px; line-height: 26px;}
+	.s_sideMenu h3.title span{ font-size: 14px; }
+	.s_sideMenu ul.golink_list li p{ font-size: 14px; }
+}
 @media (max-width:1240px){
 	.HeaderBox .TopBox ul.top_menu li h3, .HeaderBox .TopBox .searchBox input{ font-size: 16px ;}
 	.HeaderBox .TopBox ul.top_menu li h3 a{ padding: 10px 12px; }
@@ -381,7 +400,12 @@ a.more{ width: 76px; height: 76px; cursor: pointer; display: inline-block; backg
 	.styleBox ul.style_list li a{ height: 450px; }
 	.produc_box .ContentsBox ul.produc_right_deta li{ width: calc(100% / 3); }
 }
-
+@media (max-width:1180px){
+	.s_sideMenu{ bottom: initial; top: 0px; left: 0; width: 100%; position: sticky; position: -webkit-sticky; position: -moz-sticky; position: -ms-sticky; position: -o-sticky; background-color: #fff; }
+	.s_sideMenu h3.title{ text-align: center; margin-bottom: 0; background-color: #f5f5f5; border-bottom: none; }
+	.s_sideMenu ul.golink_list{ text-align: center; border-width: 0 0 1px 0; }
+	.s_sideMenu ul.golink_list li{ display: inline-block; border: none; padding: 0 15px; }
+}
 @media (max-width:1000px){
 	.HeaderBox{padding: 10px 0;}
 	.HeaderBox h1.logo{padding: 0;}
@@ -453,6 +477,7 @@ a.more{ width: 76px; height: 76px; cursor: pointer; display: inline-block; backg
 	.inside_contents .news_box ul.news_list li .newBox p.day { font-size: 22px; }
 	.inside_contents .news_box ul.news_list li .newBox p.day span{font-size: 38px; }
 	.produc_box .ContentsBox .produc_left_menu{ top: 75px; }
+	.s_sideMenu{top: 78px;}
 }
 @media (max-width:700px){
 	.styleBox ul.style_list li{ width: 100%; margin: 10px 0; }
