--- a/JH/css/style.css
+++ b/JH/css/style.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
-/*@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
 @import url('https://fonts.googleapis.com/css?family=Crimson+Text|Libre+Baskerville:700');
-@import url(//fonts.googleapis.com/earlyaccess/notoserifgeorgian.css);*/
+@import url(//fonts.googleapis.com/earlyaccess/notoserifgeorgian.css);
 
 html, body, div, span, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,abbr, address, cite, code,del, dfn, em, img, ins, kbd, q, samp,small, strong, sub, sup, var,b, i, dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, figcaption, figure,footer, header, hgroup, menu, nav, section, summary,time, mark, audio, video { margin:0; padding:0; border:0; outline:0; font-size:100%; vertical-align:baseline;}
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section { display:block;}
