--- a/iiot/taoyuang1000/linetaxi/css/style.css
+++ b/iiot/taoyuang1000/linetaxi/css/style.css
@@ -616,6 +616,35 @@ a.gotop {
   padding: 60px 50px 0 50px;
 }
 
+.middle-container .event-content .info a.btn-record {
+  width: 100%;
+  max-width: 400px;
+  text-align: center;
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ea126c+0,f9694f+100 */
+  background: #ea126c;
+  /* Old browsers */
+  /* FF3.6-15 */
+  /* Chrome10-25,Safari5.1-6 */
+  background: -webkit-gradient(linear, left top, left bottom, from(#ea126c), to(#f9694f));
+  background: linear-gradient(to bottom, #ea126c 0%, #f9694f 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ea126c', endColorstr='#f9694f', GradientType=0);
+  /* IE6-9 */
+  color: #fff;
+  font-weight: bold;
+  border-radius: 50px;
+  padding: 18px;
+  margin: 0 auto 25px auto;
+  display: table;
+  -webkit-box-shadow: #dc4a3f 3px 3px 0px;
+          box-shadow: #dc4a3f 3px 3px 0px;
+  font-size: 20px;
+}
+
+.middle-container .event-content .info a.btn-record:hover {
+  opacity: 0.9;
+}
+
 .middle-container .event-content .info p {
   font-size: 17px;
   color: #333;
@@ -643,6 +672,10 @@ a.gotop {
 @media all and (max-width: 600px) {
   .middle-container .event-content .info {
     padding: 40px 20px 0 20px;
+  }
+  .middle-container .event-content .info a.btn-record {
+    font-size: 17px;
+    padding: 18px 12px;
   }
   .middle-container .event-content .info .video-box iframe {
     height: 315px;
