--- a/iiot/taoyuang1000/linetaxi/css/style.scss
+++ b/iiot/taoyuang1000/linetaxi/css/style.scss
@@ -336,6 +336,34 @@ a.gotop {
     }
     .info {
       padding: 60px 50px 0 50px;
+      a.btn-record {
+        width: 100%;
+        max-width: 400px;
+        text-align: center;
+        /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ea126c+0,f9694f+100 */
+        background: #ea126c;
+        /* Old browsers */
+        background: -moz-linear-gradient(top, #ea126c 0%, #f9694f 100%);
+        /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, #ea126c 0%, #f9694f 100%);
+        /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, #ea126c 0%, #f9694f 100%);
+        /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ea126c', endColorstr='#f9694f', GradientType=0);
+        /* IE6-9 */
+        color: #fff;
+        font-weight: bold;
+        border-radius: 50px;
+        padding: 18px;
+        margin: 0 auto 25px auto;
+        display: table;
+        box-shadow: #dc4a3f 3px 3px 0px;
+        font-size: 20px;
+      
+        &:hover {
+          opacity: 0.9;
+        }
+      }
       p {
         font-size: 17px;
         color: #333;
@@ -361,6 +389,10 @@ a.gotop {
       }
       @media all and (max-width: 600px) {
         padding: 40px 20px 0 20px;
+        a.btn-record {
+          font-size: 17px;
+          padding: 18px 12px;
+        }
         .video-box {
           iframe {
             height: 315px;
